2021-07-07  Chris Dumez  <cdumez@apple.com>

        IDBObjectStore.keyPath should keep returning the same object
        https://bugs.webkit.org/show_bug.cgi?id=227770

        Reviewed by Darin Adler.

        IDBObjectStore.keyPath should keep returning the same object to match other
        browser engines (Gecko and Blink).

        No new tests, rebaselined existing tests.

        * Modules/indexeddb/IDBObjectStore.idl:

2021-07-07  Yoshiaki Jitsukawa  <yoshiaki.jitsukawa@sony.com>

        [OpenSSL] Implement CryptoAlgorithmEC*
        https://bugs.webkit.org/show_bug.cgi?id=227655

        Reviewed by Don Olmstead.

        Implement elliptic curve support in WebCrypto. This patch enables ECDH
        and ECDSA algorithms as well as EC key import, export, and generation.

        Note that low level ASN1 API is used in CryptoKeyEC.cpp to import
        public EC keys in the SPKI format because currently OpenSSL doesn't
        have the Object ID of the ecDH algorithm and it fails to load ecDH
        keys with d2iPUBKEY().

        * crypto/keys/CryptoKeyEC.h:
        * crypto/openssl/CryptoAlgorithmECDHOpenSSL.cpp:
        (WebCore::CryptoAlgorithmECDH::platformDeriveBits):
        * crypto/openssl/CryptoAlgorithmECDSAOpenSSL.cpp:
        (WebCore::CryptoAlgorithmECDSA::platformSign):
        (WebCore::CryptoAlgorithmECDSA::platformVerify):
        * crypto/openssl/CryptoAlgorithmRegistryOpenSSL.cpp:
        (WebCore::CryptoAlgorithmRegistry::platformRegisterAlgorithms):
        * crypto/openssl/CryptoKeyECOpenSSL.cpp:
        (WebCore::curveIdentifier):
        (WebCore::curveSize):
        (WebCore::createECKey):
        (WebCore::verifyCurve):
        (WebCore::CryptoKeyEC::keySizeInBits const):
        (WebCore::CryptoKeyEC::platformSupportedCurve):
        (WebCore::CryptoKeyEC::platformGeneratePair):
        (WebCore::CryptoKeyEC::platformImportRaw):
        (WebCore::CryptoKeyEC::platformImportJWKPublic):